--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.4",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,17 +19,24 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
+    "axios": "^0.26.1",
+    "cross-env": "^7.0.3",
     "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.3.5",
     "mobx-react": "^7.2.1",
     "nanoid": "^3.1.30",
     "npm": "^8.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
